fix(material): ensure the cards' border are visible

--- a/projects/oblique/src/styles/scss/themes/material/mat-card.scss
+++ b/projects/oblique/src/styles/scss/themes/material/mat-card.scss
@@ -2,6 +2,10 @@
 @import "../../core/mixins/typography";
 
 .mat-card {
+	&:not([class*='mat-elevation-z']) {
+		box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.5);
+	}
+
 	.mat-card-header {
 		min-height: 70px;
 
